--- a/analytics/src/main/AndroidManifest.xml
+++ b/analytics/src/main/AndroidManifest.xml
@@ -1,5 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.huawei.hms.adapter.analytics">
-
-    /
-</manifest>
+    package="com.huawei.hms.adapter.analytics"/>
